fix: remove broken css

--- a/personal-site/src/app/shared/header/header.component.scss
+++ b/personal-site/src/app/shared/header/header.component.scss
@@ -1,12 +1,1 @@
 
-nav {
-  ul {
-    @apply w-full;
-
-    &.block {
-      @apply absolute left-0 right-0 bg-white shadow-lg py-2 z-10;
-      top: 100%;
-    }
-  }
-}
-
